--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <module>modules/indexing</module>
         <module>modules/ssh</module>
         <module>modules/rest-http</module>
-        <module>modules/jta</module>
+        <!--<module>modules/jta</module>-->
         <module>modules/aws</module>
         <module>modules/log4j</module>
         <module>modules/log4j2</module>
@@ -79,14 +79,14 @@
         <module>modules/twitter</module>
         <module>modules/mqtt</module>
         <module>modules/zookeeper</module>
-        <module>modules/hibernate-core</module>
+        <!--<module>modules/hibernate-core</module>-->
         <module>modules/camel</module>
         <module>modules/storm</module>
         <module>modules/osgi-paxlogging</module>
         <module>modules/osgi-karaf</module>
         <module>modules/osgi</module>
         <module>modules/web/ignite-appserver-test</module>
-        <module>modules/web/ignite-websphere-test</module>
+        <!--<module>modules/web/ignite-websphere-test</module>-->
         <module>modules/cassandra</module>
         <module>modules/flink</module>
         <module>modules/kubernetes</module>
